--- a/PowerAmps/MOD/modgui/icon-poweramps.html
+++ b/PowerAmps/MOD/modgui/icon-poweramps.html
@@ -1,6 +1,5 @@
-<div class="mod-pedal mod-head-model-001{{{cns}}} mod-head-model-001-0550{{{cns}}}">
+<div class="mod-pedal power_amps{{{cns}}} power_amps{{{cns}}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
-    <div class="mod-plugin-brand"><h1>{{brand}}</h1></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
     <div class="mod-control-group clearfix">
         {{#controls.0}}
