--- a/PowerAmpImpulses/MOD/modgui/icon-powerampimpulses.html
+++ b/PowerAmpImpulses/MOD/modgui/icon-powerampimpulses.html
@@ -1,6 +1,7 @@
 <div class="mod-pedal power_amps_impulses{{{cns}}} power_amps_impulses{{{cns}}}">
     <div mod-role="drag-handle" class="mod-drag-handle"></div>
     <div class="mod-plugin-name"><h1>{{label}}</h1></div>
+    <div class="my-mod-light" mod-role="bypass-light"></div>
     <div class="mod-control-group clearfix">
         {{#controls.0}}
         <div class="mod-enumerated clearfix" mod-role="input-control-port" mod-port-symbol="{{symbol}}" mod-widget="custom-select">
@@ -15,7 +16,6 @@
         <div class="mod-switch" mod-role="bypass">
             <div class="mod-switch-image" mod-role="bypass-light"></div>
         </div>
-        <div class="mod-separator"></div>
         {{#controls.1}}
         <div class="mod-chicken-head" title="{{comment}}">
             <div class="mod-chicken-head-image" mod-role="input-control-port" mod-port-symbol="{{symbol}}"></div>
